@@ -1,5 +1,8 @@
 2006-05-03 Sandro Santilli <strk@refractions.net>
 
+	* source/headers/geos/noding/SegmentString.{h,inl}:
+	testInvariant() moved from private to public access
+	level, and ensured to be inlined.
 	* source/headers/geos/noding/snapround/HotPixel.inl:
 	changed sym_round() to java_math_round()
 	* source/operation/buffer/RightmostEdgeFinder.cpp: more
